# armature

./: .gitignore  404.html  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  TODO.md  ai.txt  humans.txt  llms.txt  main-25D3NIR7.js  manifest.webmanifest  robots.txt  sitemap.xml  styles-AOELTQXT.css
.cursor/rules/: angular-docs-website.mdc  api-design.mdc  auto-commit.mdc  cli-development.mdc  cloud-integrations.mdc  database-integration.mdc  dependency-injection.mdc  docs-website-components.mdc  graphql-development.mdc  middleware-development.mdc  module-development.mdc  performance-benchmarking.mdc  performance-optimization.mdc  proc-macro-development.mdc  product-manager.mdc  queue-background-jobs.mdc  realtime-websocket-sse.mdc  rust-module-creation.mdc  security-authentication.mdc  websocket-sse.mdc
.github/benchmark-baseline/: arena.txt  baseline.json  body.txt  json.txt  routing.txt  security.txt  simd_parser.txt
.github/workflows/: benchmark.yml  ci.yml  docs.yml  flamegraph.yml  pr.yml  release.yml
armature-acme/: Cargo.toml
armature-admin/: Cargo.toml
armature-admin/src/: config.rs  dashboard.rs  error.rs  field.rs  lib.rs  model.rs  registry.rs  ui.rs  views.rs
armature-analytics/: Cargo.toml
armature-analytics/src/: collector.rs  config.rs  error.rs  insights.rs  lib.rs  metrics.rs  middleware.rs
armature-app/: Cargo.toml
armature-app/src/: bindings.rs  builder.rs  error.rs  lib.rs  runner.rs  types.rs
armature-audit/: Cargo.toml
armature-auth/: Cargo.toml
armature-auth/src/: api_key.rs
armature-auth/src/providers/: linkedin.rs
armature-aws/: Cargo.toml
armature-aws/src/: services.rs
armature-azure/: Cargo.toml
armature-azure-functions/: Cargo.toml
armature-azure-functions/src/: runtime.rs
armature-cache/: Cargo.toml
armature-cache/src/: tiered.rs
armature-cli/: Cargo.toml
armature-cli/src/: main.rs  templates.rs
armature-cli/src/commands/: config.rs  generate.rs  mock.rs  mod.rs  new.rs  openapi.rs  routes.rs  run.rs
armature-cloudrun/: Cargo.toml
armature-collab/: Cargo.toml
armature-collab/src/: crdt.rs  document.rs  error.rs  lib.rs  presence.rs  session.rs  sync.rs  text.rs
armature-compression/: Cargo.toml
armature-compression/src/: middleware.rs
armature-config/: Cargo.toml
armature-core/: Cargo.toml
armature-core/src/: application.rs  cache_local.rs  connection.rs  connection_manager.rs  connection_tuning.rs  cow_state.rs  hmr.rs  http.rs  http2.rs  http3.rs  io_uring.rs  lib.rs  micro.rs  middleware.rs  numa.rs  pagination.rs  route_constraint.rs  routing.rs  runtime_config.rs  serialization_pool.rs  small_vec.rs  static_assets.rs  streaming.rs  tower_compat.rs  vectored_io.rs  worker.rs  write_coalesce.rs
armature-core/src/resilience/: bulkhead.rs  circuit_breaker.rs
armature-cron/: Cargo.toml
armature-diesel/: Cargo.toml
armature-distributed/: Cargo.toml
armature-distributed/src/: leader.rs
armature-eventsourcing/: Cargo.toml
armature-eventsourcing/src/: repository.rs
armature-features/: Cargo.toml
armature-features/src/: flag.rs
armature-ferron/: Cargo.toml
armature-ferron/src/: config.rs  manager.rs  process.rs  registry.rs
armature-files/: Cargo.toml
armature-files/src/: archive.rs  error.rs  image.rs  lib.rs  pdf.rs  pipeline.rs
armature-fuzz/: Cargo.toml
armature-gcp/: Cargo.toml
armature-graphql/: Cargo.toml
armature-graphql-client/: Cargo.toml
armature-graphql-client/src/: response.rs
armature-graphql/src/: federation.rs  lib.rs
armature-grpc/: Cargo.toml
armature-http-client/: Cargo.toml
armature-http-client/src/: circuit_breaker.rs  client.rs  interceptor.rs
armature-i18n/: Cargo.toml
armature-i18n/src/: messages.rs
armature-jwt/: Cargo.toml
armature-lambda/: Cargo.toml
armature-lambda/src/: request.rs  runtime.rs
armature-macros/: Cargo.toml
armature-mail/: Cargo.toml
armature-mail/src/: address.rs
armature-mcp/: Cargo.toml
armature-mcp/src/: auth.rs  controller.rs  error.rs  lib.rs  resource.rs  service.rs  tool.rs  types.rs
armature-mcp/tests/: trybuild.rs
armature-messaging/: Cargo.toml
armature-messaging/src/: lib.rs  mq_bridge.rs
armature-metrics/: Cargo.toml
armature-openapi/: Cargo.toml
armature-opensearch/: Cargo.toml
armature-opentelemetry/: Cargo.toml
armature-payments/: Cargo.toml
armature-payments/src/: error.rs  lib.rs  money.rs  (+3 more)
armature-proc-macro/: Cargo.toml
armature-push/: Cargo.toml
armature-queue/: Cargo.toml
armature-ratelimit/: Cargo.toml
armature-redis/: Cargo.toml
armature-rhai/: Cargo.toml
armature-seaorm/: Cargo.toml
armature-security/: Cargo.toml
armature-siem/: Cargo.toml
armature-storage/: Cargo.toml
armature-tenancy/: Cargo.toml
armature-testing/: Cargo.toml
armature-toon/: Cargo.toml
armature-validation/: Cargo.toml
armature-webhooks/: Cargo.toml
armature-websocket/: Cargo.toml
benches/: README.md  memory_benchmarks.rs  micro_benchmarks.rs
docker/: README.md
docs/: README.md  acme-certificates.md  api-versioning-guide.md  armature-vs-nextjs-benchmark.md  armature-vs-nodejs-benchmark.md  audit-guide.md  auth-guide.md  cache-improvements-guide.md  cloud-providers-guide.md  compression.md  config-guide.md  content-negotiation-guide.md  cron-guide.md  debug-logging-guide.md  dependency-injection-guide.md  deployment-guide.md  di-guide.md  diesel-guide.md  docker-guide.md  documentation-testing.md  error-correlation-guide.md  error-transformation-guide.md  etag-conditional-requests-guide.md  ferron-guide.md  framework-comparison.md  fuzzing-guide.md  graceful-shutdown-guide.md  graphql-configuration.md  graphql-guide.md  guards-interceptors.md  health-check-guide.md  http-status-errors.md  https-guide.md  i18n-guide.md  kubernetes-guide.md  lifecycle-hooks.md  logging-guide.md  macro-overview.md  macros-guide.md  memory-profiling-guide.md  (+34 more)
examples/: memory_profile_server.rs  micro_benchmark_server.rs  rhai_app.rs
scripts/: benchmark-comparison.sh  memory-profile.sh  publish.sh
tests/: common_workflows.rs
web/: package.json  pnpm-lock.yaml
(+95 files in other folders)
