[workspace]
members = [
    "armature-log",
    "armature-core",
    "armature-proc-macro",
    "armature-graphql",
    "armature-config",
    "armature-jwt",
    "armature-auth",
    "armature-testing",
    "armature-validation",
    "armature-openapi",
    "armature-cache",
    "armature-cron",
    "armature-queue",
    "armature-opentelemetry",
    "armature-security",
    "armature-acme",
    "armature-ratelimit",
    "armature-compression",
    "armature-webhooks",
    "armature-messaging",
    "armature-metrics",
    "armature-audit",
    "armature-tenancy",
    "armature-features",
    "armature-cli",
    "armature-events",
    "armature-eventsourcing",
    "armature-cqrs",
    "armature-distributed",
    "armature-discovery",
    "armature-macros",
    "armature-macros-utils",
    "armature-http-client",
    "armature-grpc",
    "armature-graphql-client",
    "armature-storage",
    "armature-mail",
    "armature-push",
    "armature-aws",
    "armature-gcp",
    "armature-azure",
    "armature-redis",
    "armature-lambda",
    "armature-cloudrun",
    "armature-azure-functions",
    "armature-ferron",
    "armature-opensearch",
    "armature-toon",
    "armature-i18n",
    "armature-diesel",
    "armature-seaorm",
    "armature-websocket",
    "armature-analytics",
    "armature-files",
    "armature-collab",
    "armature-admin",
    "armature-payments",
    "armature-rhai",
    "armature-siem",
    "armature-app",
]
exclude = [
    "templates/*",
    "benches/comparison_servers/actix_server",
    "benches/comparison_servers/axum_server",
    "benches/comparison_servers/warp_server",
    "benches/comparison_servers/rocket_server",
]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2024"
rust-version = "1.89"
authors = ["Pegasus Heavy Industries LLC"]
license = "Apache-2.0"
repository = "https://github.com/pegasusheavy/armature"
homepage = "https://pegasusheavy.github.io/armature"

[package]
name = "armature-framework"
version = "0.2.1"
edition = "2024"
rust-version = "1.89"
autobenches = false  # Disable auto-discovery, use explicit [[bench]] only
authors = ["Pegasus Heavy Industries LLC"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/pegasusheavy/armature"
homepage = "https://pegasusheavy.github.io/armature"
documentation = "https://docs.rs/armature-framework"
description = "A modern, type-safe HTTP framework for Rust inspired by Angular and NestJS. Features dependency injection, decorators, middleware, authentication (JWT/OAuth2/SAML), validation, OpenAPI/Swagger, caching, job queues, and observability."
keywords = ["web", "framework", "http", "async", "nestjs"]
categories = ["web-programming::http-server", "asynchronous", "network-programming"]
exclude = [
    ".git/",
    ".github/",
    ".gitignore",
    ".cursor/",
    "target/",
    "web/",
    "CONTRIBUTING.md",
    "COVERAGE_STATUS.md",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "armature"
path = "src/lib.rs"

[dependencies]
armature-core = { path = "armature-core", version = "0.2.1" }
armature-proc-macro = { path = "armature-proc-macro", version = "0.1.0" }
armature-graphql = { path = "armature-graphql", version = "0.2.0", optional = true }
armature-config = { path = "armature-config", version = "0.1.1", optional = true }
armature-jwt = { path = "armature-jwt", version = "0.1.1", optional = true }
armature-auth = { path = "armature-auth", version = "0.1.1", optional = true }
armature-testing = { path = "armature-testing", version = "0.1.1", optional = true }
armature-validation = { path = "armature-validation", version = "0.1.1", optional = true }
armature-openapi = { path = "armature-openapi", version = "0.1.1", optional = true }
armature-cache = { path = "armature-cache", version = "0.1.0", optional = true }
armature-cron = { path = "armature-cron", version = "0.1.1", optional = true }
armature-queue = { path = "armature-queue", version = "0.1.1", optional = true }
armature-opentelemetry = { path = "armature-opentelemetry", version = "0.1.1", optional = true }
armature-security = { path = "armature-security", version = "0.1.1", optional = true }
armature-acme = { path = "armature-acme", version = "0.1.1", optional = true }
armature-ratelimit = { path = "armature-ratelimit", version = "0.1.1", optional = true }
armature-compression = { path = "armature-compression", version = "0.1.1", optional = true }
armature-webhooks = { path = "armature-webhooks", version = "0.1.1", optional = true }
armature-messaging = { path = "armature-messaging", version = "0.1.0", optional = true }

# Re-export core functionality
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
tokio-stream = "0.1"

[features]
default = []
full = [
    "graphql",
    "config",
    "jwt",
    "auth",
    "testing",
    "validation",
    "openapi",
    "cache",
    "cron",
    "queue",
    "opentelemetry",
    "security",
    "acme",
    "ratelimit",
    "compression",
    "webhooks",
    "messaging",
]
# Full feature set including SAML (requires openssl/xmlsec1)
full-with-saml = ["full", "saml"]
# For minimal-versions check: exclude memcached (enum_dispatch 0.3.0 is broken)
full-minimal-versions = [
    "graphql",
    "config",
    "jwt",
    "auth",
    "testing",
    "validation",
    "openapi",
    "cache-redis-only",
    "cron",
    "queue",
    "opentelemetry",
    "security",
    "acme",
    "ratelimit",
    "compression",
    "webhooks",
]

graphql = ["armature-graphql"]
config = ["armature-config"]
jwt = ["armature-jwt"]
auth = ["armature-auth", "armature-jwt"]
# SAML authentication - requires openssl and xmlsec1 system libraries
# Ubuntu/Debian: apt-get install libxml2-dev libxmlsec1-dev libxmlsec1-openssl
# macOS: brew install libxmlsec1
saml = ["armature-auth/saml"]
testing = ["armature-testing"]
validation = ["armature-validation"]
openapi = ["armature-openapi"]
cache = ["armature-cache", "armature-cache/memcached"]
# For minimal-versions check: only redis, skip memcached (enum_dispatch 0.3.0 is broken with modern syn)
cache-redis-only = ["armature-cache"]
cron = ["armature-cron"]
queue = ["armature-queue"]
opentelemetry = ["armature-opentelemetry"]
security = ["armature-security"]
acme = ["armature-acme"]
ratelimit = ["armature-ratelimit"]
compression = ["armature-compression"]
webhooks = ["armature-webhooks"]
messaging = ["armature-messaging"]
messaging-rabbitmq = ["armature-messaging/rabbitmq"]
messaging-kafka = ["armature-messaging/kafka"]
messaging-nats = ["armature-messaging/nats"]
messaging-full = ["armature-messaging/full"]

# Performance features
simd-json = ["armature-core/simd-json"]

# Memory profiling (for leak detection)
memory-profiling = ["dhat"]

[dependencies.dhat]
version = "0.3"
optional = true

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.8", features = ["html_reports", "async_tokio"] }
regex = "1.10"
cargo-husky = { version = "1.5", default-features = false, features = ["user-hooks"] }
rand = "0.9"
reqwest = { version = "0.12", features = ["json"] }
ctrlc = "3.4"
crossbeam = "0.8"  # Lock-free data structures for benchmarks

# Unix-only profiling dependencies (pprof requires Unix-specific APIs)
[target.'cfg(unix)'.dev-dependencies]
pprof = { version = "0.14", features = ["flamegraph", "criterion", "prost-codec"] }
inferno = "0.12"

# =============================================================================
# Build Profiles
# =============================================================================
#
# Available profiles:
#   - release        : Production build with thin LTO (default)
#   - release-fat    : Maximum optimization with fat LTO
#   - release-native : Native CPU optimizations for benchmarks
#   - profiling      : Release with debug symbols for profiling
#   - pgo-generate   : Generate PGO profile data
#   - pgo-use        : Use PGO profile data for optimization
#
# Usage:
#   cargo build --profile release-fat
#   cargo bench --profile release-native
#
# PGO workflow:
#   1. cargo build --profile pgo-generate
#   2. ./target/pgo-generate/your-binary  # Run representative workload
#   3. llvm-profdata merge -o merged.profdata /tmp/pgo-*.profraw
#   4. RUSTFLAGS="-Cprofile-use=$(pwd)/merged.profdata" cargo build --profile pgo-use
#
# =============================================================================

# Standard release: thin LTO, single codegen unit
[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = "symbols"

# Maximum optimization: fat LTO, slower compile but faster runtime
# Use for final production builds where compile time doesn't matter
[profile.release-fat]
inherits = "release"
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"  # Smaller binary, no unwinding

# Native CPU: enables target-cpu=native via build.rs
# Best for benchmarks on the build machine
[profile.release-native]
inherits = "release"
lto = "thin"
codegen-units = 1
opt-level = 3

# Profiling: release with debug symbols
# Use with: cargo flamegraph --profile profiling
[profile.profiling]
inherits = "release"
debug = true  # Enable debug symbols for better stack traces
strip = "none"

# PGO Generate: build to collect profile data
# Step 1: Build with this profile
# Step 2: Run representative workload
# Profile data written to /tmp/pgo-*.profraw
[profile.pgo-generate]
inherits = "release"
lto = "thin"
codegen-units = 1
opt-level = 3

# PGO Use: build using collected profile data
# Requires: RUSTFLAGS="-Cprofile-use=path/to/merged.profdata"
# Can provide 10-20% performance improvement
[profile.pgo-use]
inherits = "release"
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"

# Development with optimizations (faster iteration than release)
[profile.dev-opt]
inherits = "dev"
opt-level = 2

# Benchmark profile: optimized for accurate benchmarking
[profile.bench]
lto = "thin"
codegen-units = 1
opt-level = 3
debug = false

# Armature crates for examples and benchmarks
[dev-dependencies.armature-validation]
path = "armature-validation"

[dev-dependencies.armature-jwt]
path = "armature-jwt"

[dev-dependencies.armature-queue]
path = "armature-queue"

[dev-dependencies.armature-cron]
path = "armature-cron"

[dev-dependencies.armature-cache]
path = "armature-cache"
features = ["redis"]

[dev-dependencies.armature-ratelimit]
path = "armature-ratelimit"

[dev-dependencies.armature-metrics]
path = "armature-metrics"

[dev-dependencies.armature-audit]
path = "armature-audit"

[dev-dependencies.armature-security]
path = "armature-security"

[dev-dependencies.armature-testing]
path = "armature-testing"

[dev-dependencies.armature-events]
path = "armature-events"

[dev-dependencies.armature-eventsourcing]
path = "armature-eventsourcing"

[dev-dependencies.armature-cqrs]
path = "armature-cqrs"

[dev-dependencies.armature-distributed]
path = "armature-distributed"

[dev-dependencies.armature-discovery]
path = "armature-discovery"

[dev-dependencies.armature-tenancy]
path = "armature-tenancy"

[dev-dependencies.armature-features]
path = "armature-features"

[dev-dependencies.armature-auth]
path = "armature-auth"

[dev-dependencies.armature-storage]
path = "armature-storage"

[dev-dependencies.armature-http-client]
path = "armature-http-client"

[dev-dependencies.armature-ferron]
path = "armature-ferron"

[dev-dependencies.armature-app]
path = "armature-app"

[dev-dependencies.fastrand]
version = "2.3"

[dev-dependencies.jsonwebtoken]
version = "10.2"
features = ["rust_crypto"]

[dev-dependencies.handlebars]
version = "6.3"

[dev-dependencies.bytes]
version = "1.5"

# Database ORMs for examples - using rustls instead of native-tls to avoid openssl
[dev-dependencies.sqlx]
version = "0.8"
features = ["runtime-tokio-rustls", "postgres", "chrono"]

[dev-dependencies.diesel]
version = "2.2"
features = ["postgres", "r2d2", "chrono"]

[dev-dependencies.sea-orm]
version = "1.1"
features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"]

[dev-dependencies.chrono]
version = "0.4"

[dev-dependencies.uuid]
version = "1.11"
features = ["v4"]

[dev-dependencies.tracing]
version = "0.1"

[dev-dependencies.tracing-subscriber]
version = "0.3"

# Examples require runtime dependencies
[[example]]
name = "full_example"
path = "examples/full_example.rs"

[[example]]
name = "simple"
path = "examples/simple.rs"

[[example]]
name = "rest_api"
path = "examples/rest_api.rs"

[[example]]
name = "dependency_injection"
path = "examples/dependency_injection.rs"

[[example]]
name = "automatic_di"
path = "examples/automatic_di.rs"

[[example]]
name = "websocket_chat"
path = "examples/websocket_chat.rs"

[[example]]
name = "server_sent_events"
path = "examples/server_sent_events.rs"

[[example]]
name = "graphql_api"
path = "examples/graphql_api.rs"
required-features = ["graphql"]

[[example]]
name = "graphql_with_docs"
path = "examples/graphql_with_docs.rs"
required-features = ["graphql"]

[[example]]
name = "config_example"
path = "examples/config_example.rs"
required-features = ["config"]

[[example]]
name = "jwt_simple"
path = "examples/jwt_simple.rs"
required-features = ["jwt"]

[[example]]
name = "auth_complete"
path = "examples/auth_complete.rs"
required-features = ["auth"]

[[example]]
name = "oauth2_providers"
path = "examples/oauth2_providers.rs"
required-features = ["auth"]

[[example]]
name = "saml_simple"
path = "examples/saml_simple.rs"
required-features = ["auth", "saml"]

[[example]]
name = "guards_interceptors"
path = "examples/guards_interceptors.rs"

[[example]]
name = "http_errors"
path = "examples/http_errors.rs"

[[example]]
name = "middleware_demo"
path = "examples/middleware_demo.rs"

[[example]]
name = "testing_example"
path = "examples/testing_example.rs"

[[example]]
name = "validation_example"
path = "examples/validation_example.rs"
required-features = ["validation"]

[[example]]
name = "security_example"
path = "examples/security_example.rs"
required-features = ["security"]

[[example]]
name = "acme_certificate"
path = "examples/acme_certificate.rs"
required-features = ["acme"]

[[example]]
name = "form_processing"
path = "examples/form_processing.rs"

[[example]]
name = "static_assets"
path = "examples/static_assets.rs"

[[example]]
name = "handlebars_templates"
path = "examples/handlebars_templates.rs"

[[example]]
name = "rate_limiting"
path = "examples/rate_limiting.rs"
required-features = ["ratelimit"]

[[example]]
name = "compression_example"
path = "examples/compression_example.rs"
required-features = ["compression"]

[[example]]
name = "webhooks_example"
path = "examples/webhooks_example.rs"
required-features = ["webhooks"]

[[example]]
name = "extractors_example"
path = "examples/extractors_example.rs"

[[example]]
name = "profiling_server"
path = "examples/profiling_server.rs"

[[example]]
name = "techempower_server"
path = "examples/techempower_server.rs"

# Benchmarks
[[bench]]
name = "core_benchmarks"
harness = false

[[bench]]
name = "security_benchmarks"
harness = false

[[bench]]
name = "validation_benchmarks"
harness = false

[[bench]]
name = "data_benchmarks"
harness = false

[[bench]]
name = "framework_comparison"
harness = false

[[bench]]
name = "resilience_benchmarks"
harness = false

[[bench]]
name = "cache_benchmarks"
harness = false

[[bench]]
name = "auth_benchmarks"
harness = false

[[bench]]
name = "ratelimit_benchmarks"
harness = false

[[bench]]
name = "storage_benchmarks"
harness = false

[[bench]]
name = "http_client_benchmarks"
harness = false

[[bench]]
name = "simd_parser_benchmarks"
harness = false

[[bench]]
name = "json_benchmarks"
harness = false

[[bench]]
name = "arena_benchmarks"
harness = false

[[bench]]
name = "body_benchmarks"
harness = false

[[bench]]
name = "pipeline_benchmarks"
harness = false

[[bench]]
name = "database_benchmarks"
harness = false

[[bench]]
name = "memory_benchmarks"
harness = false

[[bench]]
name = "micro_benchmarks"
harness = false

# Benchmark Examples
[[example]]
name = "benchmark_server"
path = "examples/benchmark_server.rs"

[[example]]
name = "memory_profile_server"
path = "examples/memory_profile_server.rs"

[[example]]
name = "rhai_app"
path = "examples/rhai_app.rs"

# Benchmark Tools
[[bin]]
name = "http-benchmark"
path = "benches/http_benchmark_runner.rs"
