[package]
name = "armature-acme"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "ACME protocol support for automatic TLS certificates in Armature"
keywords = ["acme", "tls", "certificates", "letsencrypt"]
categories = ["web-programming", "cryptography"]

[dependencies]
armature-core = { path = "../armature-core", version = "0.2.1" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# HTTP client for ACME protocol
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Cryptography
rustls = "0.23"
rustls-pemfile = "2.0"
rcgen = { version = "0.14", features = ["pem"] }
ring = "0.17"
base64 = "0.22"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
