[package]
name = "armature-audit"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Audit logging and compliance for Armature"
keywords = ["audit", "logging", "compliance", "security"]
categories = ["web-programming", "development-tools::debugging"]

[dependencies]
armature-core = { path = "../armature-core", version = "0.2.1" }
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
regex = "1.10"
tracing = "0.1"
once_cell = "1.19"
thiserror = "2.0"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"

