[package]
name = "armature-auth"
version = "0.1.2"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Authentication and authorization for Armature framework"
keywords = ["auth", "authentication", "authorization", "oauth"]
categories = ["web-programming", "authentication"]

[dependencies]
armature-core = { path = "../armature-core", version = "0.2.1" }
armature-jwt = { path = "../armature-jwt", version = "0.1.1" }
armature-log = { path = "../armature-log", version = "0.1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
async-trait = "0.1"
bcrypt = "0.17"
argon2 = { version = "0.5", features = ["std"] }
rand = "0.9"
base64 = "0.22"

# OAuth2 support - using rustls for TLS (no openssl)
# Note: 5.0.0-rc.1 has minimal-versions compatibility issues with serde
oauth2 = "5.0.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
url = "2.5"
tokio = { version = "1.35", features = ["full"] }

# SAML support (optional - requires openssl/xmlsec for XML signature verification)
# Enable with `saml` feature. Note: This requires system libraries (libxml2, xmlsec1)
samael = { version = "0.0.19", optional = true }

# 2FA support
totp-lite = { version = "2.0", optional = true }
data-encoding = { version = "2.5", optional = true }
qrcode = { version = "0.14", optional = true }

# WebAuthn support
webauthn-rs = { version = "0.5", optional = true }

# Common utilities
chrono = "0.4"
flate2 = { version = "1.0.17", optional = true }  # Used by SAML
quick-xml = { version = "0.38", features = ["serialize"], optional = true }  # Used by SAML
uuid = { version = "1.7", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"

[features]
default = []
# SAML support - requires openssl and xmlsec1 system libraries
# On Ubuntu/Debian: apt-get install libxml2-dev libxmlsec1-dev libxmlsec1-openssl
# On macOS: brew install libxmlsec1
saml = ["dep:samael", "dep:flate2", "dep:quick-xml"]
# Two-factor authentication support
two-factor = ["dep:totp-lite", "dep:data-encoding", "dep:qrcode"]
# WebAuthn passwordless authentication
webauthn = ["dep:webauthn-rs"]
# All additional auth features
full = ["saml", "two-factor", "webauthn"]

[dev-dependencies]
tokio-test = "0.4"
# Note: SAML tests require the `saml` feature to be enabled
# Run with: cargo test --features saml

