[package]
name = "armature-aws"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "AWS cloud services integration for Armature - dynamically loadable and DI-ready"
keywords = ["aws", "cloud", "s3", "dynamodb", "lambda"]
categories = ["web-programming", "asynchronous"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["sync"] }
async-trait = "0.1"

# AWS SDK - core
aws-config = { version = "1.5" }
aws-credential-types = { version = "1.2" }
aws-types = { version = "1.3" }

# AWS SDK - services (all optional)
aws-sdk-s3 = { version = "1.61", optional = true }
aws-sdk-dynamodb = { version = "1.55", optional = true }
aws-sdk-sqs = { version = "1.51", optional = true }
aws-sdk-sns = { version = "1.52", optional = true }
aws-sdk-sesv2 = { version = "1.60", optional = true }
aws-sdk-lambda = { version = "1.56", optional = true }
aws-sdk-secretsmanager = { version = "1.55", optional = true }
aws-sdk-ssm = { version = "1.55", optional = true }
aws-sdk-cloudwatch = { version = "1.57", optional = true }
aws-sdk-kinesis = { version = "1.52", optional = true }
aws-sdk-eventbridge = { version = "1.54", optional = true }
aws-sdk-ecs = { version = "1.57", optional = true }
aws-sdk-ecr = { version = "1.54", optional = true }
aws-sdk-rds = { version = "1.62", optional = true }
aws-sdk-elasticache = { version = "1.56", optional = true }
aws-sdk-cognito-idp = { version = "1.57", optional = true, package = "aws-sdk-cognitoidentityprovider" }
aws-sdk-kms = { version = "1.52", optional = true }
aws-sdk-sts = { version = "1.52", optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"

# Utilities
tracing = "0.1"
parking_lot = "0.12"

[dev-dependencies]
tokio = { version = "1.35", features = ["full", "test-util"] }

[features]
default = []
# Individual services
s3 = ["aws-sdk-s3"]
dynamodb = ["aws-sdk-dynamodb"]
sqs = ["aws-sdk-sqs"]
sns = ["aws-sdk-sns"]
ses = ["aws-sdk-sesv2"]
lambda = ["aws-sdk-lambda"]
secrets-manager = ["aws-sdk-secretsmanager"]
ssm = ["aws-sdk-ssm"]
cloudwatch = ["aws-sdk-cloudwatch"]
kinesis = ["aws-sdk-kinesis"]
eventbridge = ["aws-sdk-eventbridge"]
ecs = ["aws-sdk-ecs"]
ecr = ["aws-sdk-ecr"]
rds = ["aws-sdk-rds"]
elasticache = ["aws-sdk-elasticache"]
cognito = ["aws-sdk-cognito-idp"]
kms = ["aws-sdk-kms"]
sts = ["aws-sdk-sts"]
# Service groups
storage = ["s3", "dynamodb"]
messaging = ["sqs", "sns", "kinesis", "eventbridge"]
compute = ["lambda", "ecs"]
security = ["secrets-manager", "kms", "cognito", "sts"]
# All services
all = ["storage", "messaging", "compute", "security", "ses", "ssm", "cloudwatch", "ecr", "rds", "elasticache"]

