[package]
name = "armature-azure-functions"
version = "0.1.2"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Azure Functions runtime adapter for Armature applications"
keywords = ["azure", "functions", "serverless", "armature", "faas"]
categories = ["web-programming", "asynchronous"]

[dependencies]
# Armature core
armature-core = { path = "../armature-core", version = "0.2.1" }

# Azure SDK (optional, for Azure service access)
armature-azure = { path = "../armature-azure", version = "0.1.0", optional = true }

# Async runtime
tokio = { version = "1.35", features = ["macros", "rt-multi-thread", "net"] }
async-trait = "0.1"

# HTTP server for custom handler
hyper = { version = "1.4", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server"] }
http-body-util = "0.1"

# HTTP types
http = "1.1"
bytes = "1.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"

# URL encoding
urlencoding = "2.1"

# Base64 for binary responses
base64 = "0.22"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dev-dependencies]
tokio = { version = "1.35", features = ["full", "test-util"] }

[features]
default = []
azure-services = ["armature-azure"]

