[package]
name = "armature-cache"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Cache management for Armature framework with Redis and in-memory support"
keywords = ["cache", "redis", "memory", "distributed"]
categories = ["caching", "web-programming"]

[dependencies]
# Logging
armature-log = { path = "../armature-log", version = "0.1.0" }

# Core dependencies
async-trait = "0.1"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Redis support (optional) - uses armature-redis for DI integration
armature-redis = { path = "../armature-redis", version = "0.1.0", optional = true }
redis = { version = "1.0", features = ["tokio-comp", "connection-manager"], optional = true }

# Memcached support (optional) - TLS disabled to avoid openssl dependency
# For TLS support, users can enable "memcached-tls" feature
memcache = { version = "0.19", optional = true, default-features = false }

[features]
# Note: memcached removed from default due to enum_dispatch minimal-versions issues
default = ["redis"]
redis = ["dep:redis", "armature-redis"]
memcached = ["dep:memcache"]
memcached-tls = ["memcache/tls"]  # Requires openssl

[dev-dependencies]
tokio = { version = "1.35", features = ["full", "test-util"] }

