[package]
name = "armature-cli"
version = "0.2.3"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CLI tool for Armature framework - scaffolding and development"
keywords = ["cli", "code-generation", "development", "web-framework"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "armature"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "color", "suggestions", "env"] }
clap_complete = "4.5"
colored = "3.0"
dialoguer = { version = "0.12", features = ["fuzzy-select"] }
indicatif = "0.18"
toml = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["full"] }
notify = "8.0"
notify-debouncer-mini = "0.7"
walkdir = "2.5"
thiserror = "2.0"
heck = "0.5"
include_dir = "0.7"
handlebars = "6.3"
ctrlc = "3.4"
which = "8.0"
chrono = "0.4"
dirs = "6.0"
webbrowser = "1.0"
console = "0.16"
owo-colors = "4.1"
open = "5.3"

# OpenAPI client generation
openapiv3 = "2.0"
reqwest = { version = "0.12", features = ["json"], default-features = false }

# Mock server (uses armature-core)
armature-core = { path = "../armature-core", version = "0.2.1" }

# Rhai application runner
armature-app = { path = "../armature-app", version = "0.1.1" }

[dev-dependencies]
tempfile = "3.20"
assert_cmd = "2.0"
predicates = "3.1"

