[package]
name = "armature-cloudrun"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Google Cloud Run deployment utilities for Armature applications"
keywords = ["cloudrun", "serverless", "gcp", "armature", "cloud"]
categories = ["web-programming", "asynchronous"]

[dependencies]
# Armature core
armature-core = { path = "../armature-core", version = "0.2.1" }

# GCP SDK (optional, for GCP service access)
armature-gcp = { path = "../armature-gcp", version = "0.1.0", optional = true }

# Async runtime
tokio = { version = "1.35", features = ["macros", "rt-multi-thread", "signal"] }

# HTTP server (Cloud Run uses standard HTTP)
hyper = { version = "1.4", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "server-auto"] }
http-body-util = "0.1"

# HTTP types
http = "1.1"
bytes = "1.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"

# Async traits
async-trait = "0.1"

# HTTP client for metadata service
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Tracing (for Cloud Logging)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-stackdriver = "0.10"

[dev-dependencies]
tokio = { version = "1.35", features = ["full", "test-util"] }

[features]
default = []
gcp-services = ["armature-gcp"]

