[package]
name = "armature-compression"
version = "0.1.2"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "HTTP compression middleware with gzip, brotli, and zstd support"
keywords = ["compression", "gzip", "brotli", "zstd", "middleware"]
categories = ["compression", "web-programming"]

[dependencies]
# Core dependencies
armature-core = { path = "../armature-core", version = "0.2.1" }
async-trait = "0.1"
thiserror = "2.0"
tracing = "0.1"
bytes = "1"

# Gzip compression (optional)
flate2 = { version = "1.0", optional = true }

# Brotli compression (optional)
brotli = { version = "8.0", optional = true }

# Zstd compression (optional)
zstd = { version = "0.13", optional = true }

[features]
default = ["gzip", "brotli"]
gzip = ["dep:flate2"]
brotli = ["dep:brotli"]
zstd = ["dep:zstd"]
full = ["gzip", "brotli", "zstd"]

[dev-dependencies]
tokio = { version = "1.35", features = ["full", "test-util"] }

