[package]
name = "armature-config"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Configuration management for Armature with environment and file support"
keywords = ["config", "configuration", "environment", "settings"]
categories = ["config", "web-programming"]

[dependencies]
armature-core = { path = "../armature-core", version = "0.2.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
dotenvy = "0.15"
thiserror = "2.0"

[dev-dependencies]
tokio-test = "0.4"

