[package]
name = "armature-core"
version = "0.2.3"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "High-performance async HTTP framework core - routing, handlers, middleware"
keywords = ["http", "async", "web", "framework"]
categories = ["web-programming::http-server", "asynchronous"]

[dependencies]
armature-log = { path = "../armature-log", version = "0.1.0" }
inventory = "0.3"
dependency-injector = "1.0.0"
matchit = "0.8"  # High-performance router (same as Axum)
tokio = { version = "1.35", features = ["full"] }
hyper = { version = "1.1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full", "tokio"] }
http-body-util = "0.1"
http = "1.1"
tower = { version = "0.5", features = ["util"] }
tower-service = "0.3"
bytes = "1.5"
smallvec = { version = "1.13", features = ["union", "const_generics"] }
compact_str = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# SIMD-optimized HTTP parsing (uses SIMD on x86/x86_64 with std)
httparse = "1.8"
memchr = "2.7"  # SIMD-optimized byte search

# Optional SIMD JSON - significantly faster on x86_64 with AVX2
simd-json = { version = "0.17", optional = true }

# Arena allocator for per-request batch allocations
bumpalo = { version = "3.16", features = ["collections"] }
serde_urlencoded = "0.7"
urlencoding = "2.1"  # Fast URL encoding/decoding
httpdate = "1.0"
async-trait = "0.1"
flate2 = "1.0.17"
brotli = "8.0"
uuid = { version = "1.11", features = ["v4"] }
thiserror = "2.0"
tokio-tungstenite = "0.28"
futures-util = "0.3"
tokio-stream = "0.1"
regex = "1.10"

# Resilience patterns
parking_lot = "0.12"

# Bounded caches
lru = "0.12"

# Hot Module Reload (HMR)
notify = "8.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3.16", features = ["json", "env-filter"] }
tracing-appender = "0.2"

# TLS/HTTPS support
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
rustls-pemfile = "2.0"
rcgen = { version = "0.14", optional = true }

# HTTP/3 (QUIC) support - optional
quinn = { version = "0.11", optional = true }
h3 = { version = "0.0.8", optional = true }
h3-quinn = { version = "0.0.10", optional = true }

# Unix system calls (Linux, macOS, BSD)
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = []
self-signed-certs = ["rcgen"]
simd-json = ["dep:simd-json"]

# HTTP/3 (QUIC) support - next-gen protocol with multiplexing over UDP
# Requires: quinn, h3, h3-quinn
http3 = ["quinn", "h3", "h3-quinn"]

# io_uring support for Linux (kernel 5.1+)
# Provides 3-5% throughput improvement via reduced syscall overhead
io-uring = []

[dev-dependencies]
tokio-test = "0.4"

